--- a/soft_introduction.html
+++ b/soft_introduction.html
@@ -33,8 +33,8 @@
                     <aside class="notes">
                         <p>W CfP zajmujemy się:</p>
                         <ul>
-                            <li>rozwiązywaniem problemów społecznych za pomocą technologii</li>
-                            <li>Wspieramy głównie organizacje pozarządowe tworząc dla nich aplikacje, strony, wspomagamy je w digitalizacji procesów i danych</li>
+                            <li>rozwiązywaniem problemów społecznych za pomocą technologii,</li>
+                            <li>wspieraniem głównie organizacji pozarządowych poprzez tworzenie dla nich aplikacji, stron, wspomaganiem ich w digitalizacji procesów i danych.</li>
                         </ul>
                         <p>Działamy od października 2016.</p>
                         <p>W CfP pracuje obecnie kilka zespołów skupiających się różnych aspektach dostarczania oprogramowania:</p>
@@ -44,7 +44,7 @@
                             <li>UX</li>
                             <li>PMO</li>
                         </ul>
-                        <p>Jesteśmy w trakcie dopinania formalności związanych z założeniem stowarzyszenia</p>
+                        <p>Jesteśmy w trakcie finalizowania formalności związanych z założeniem stowarzyszenia</p>
                     </aside>
                 </section>
                 <section>
@@ -70,55 +70,55 @@
                         <p>Aplikacja mobilna dla Polskiej Akcji Humanitarnej</p>
                         <p>Zadania:</p>
                         <ul>
-                            <li>zarządzanie flotą samochodową na misjach</li>
+                            <li>zarządzanie flotą samochodową na misjach,</li>
                             <li>digitalizacja danych o przejazdach, potrzebnych są do rozliczenia
                                 kierowców:
                                 <ul>
-                                    <li>kilometraż</li>
-                                    <li>litry zatankowanego paliwa</li>
-                                    <li>projekt w którym rozliczony ma być przejazd</li>
+                                    <li>kilometraż,</li>
+                                    <li>litry zatankowanego paliwa,</li>
+                                    <li>projekt w którym rozliczony ma być przejazd.</li>
                                 </ul>
                             </li>
                         </ul>
-                        <p>Dane te, do tej pory zbierane były w wersji papierowej.</p>
+                        <p>Dane te do tej pory zbierane były w wersji papierowej.</p>
                         <p>Wyzwanie:</p>
                         <ul>
                             <li>działanie offline</li>
                         </ul>
                         <p>Pilotaż:</p>
                         <ul>
-                            <li>Ukraina</li>
-                            <li>Sudan Południowy</li>
-                            <li>Somalia</li>
+                            <li>Ukraina,</li>
+                            <li>Sudan Południowy,</li>
+                            <li>Somalia.</li>
                         </ul>
                         <p>Przyszłość:</p>
                         <ul>
-                            <li>Jemen</li>
-                            <li>Irak</li>
+                            <li>Jemen,</li>
+                            <li>Irak.</li>
                         </ul>
                         <p>Aplikacja działa obecnie w dwóch wersjach:</p>
                         <ul>
                             <li>Aplikacja dla kierowcy:
                                 <ul>
-                                    <li>zbieranie danych o pojedynczym przejeździe</li>
-                                    <li>przesyłanie danych do bazy danych w Django Adminie</li>
+                                    <li>zbieranie danych o pojedynczym przejeździe,</li>
+                                    <li>przesyłanie danych do bazy danych w Django Adminie.</li>
                                 </ul>
                             <li>Aplikacja dla pasażera:</li>
                                 <ul>
-                                    <li>generowanie 6-cyfrowego tokenu - potwierdzenie/weryfikacja przejazdu</li>
+                                    <li>generowanie 6-cyfrowego tokenu - potwierdzenie/weryfikacja przejazdu.</li>
                                 </ul>
                             </li>
                         </ul>
                         <p>Aktualne prace skupiają się na:</p>
                         <ul>
-                            <li>zbudowanie panelu do obsługi tankowań</li>
-                            <li>zbudowanie backendu do aplikacji pasażera</li>
+                            <li>zbudowaniu panelu do obsługi tankowań,</li>
+                            <li>zbudowaniu backendu do aplikacji pasażera.</li>
                         </ul>
                         <p>Technologia:</p>
                         <ul>
-                            <li>Django na serwerze</li>
-                            <li>Vue w przeglądarce</li>
-                            <li>Postgress SQL w bazie</li>
+                            <li>Django na serwerze,</li>
+                            <li>Vue w przeglądarce,</li>
+                            <li>Postgress SQL w bazie.</li>
                         </ul>
                     </aside>
                 </section>
@@ -134,14 +134,23 @@
                     <img src="img/StronaSpolecznosci.png" style="background:none; border:none; box-shadow:none; "/>
                     <a href="https://codeforpoznan.pl/">https://codeforpoznan.pl/</a>
                     <aside class="notes">
-                        <p>Wraz z rozwojem naszej społeczności wzrastają nasze wewnętrzne potrzeby jak organizacji. Trzecia wersja strony nad którą aktualnie pracujemy ma realizować kilka zadań. Po pierwsze jest to miejsce do komunikacji stowarzyszenia z nowymi wolontariuszami, organizacjami non-profit. Po drugie ma to być miejsce wspierające codzienną pracę aktualnych członków. Mamy tutaj dwa aspekty, kontaktu wewnątrz organizacji oraz  ze światem zewnętrznym.
-                        Strona składa się z dwóch części, widocznej która służy do kontaktu z interesariuszami. Jest ot część do której każdy ma dostęp. Jest w stanie z niej dowiedzieć się potrzebnych informacji. Pod spodem jest to cześć w której zbieramy narzędzia do rozwiązywania problemów, optymalizacji procesów czy wzajemnej pomocy w organizacji. Plan jest taki aby ta wewnętrzna część strony stała się czymś na wzór intranetu.</p>
+                        <p>Wraz z rozwojem naszej społeczności wzrastają wewnętrzne potrzeby jako organizacji. Trzecia wersja strony nad którą aktualnie pracujemy ma realizować kilka zadań.</p>
+                        <ul>
+                            <li>Po pierwsze, jest to miejsce do komunikacji stowarzyszenia z nowymi wolontariuszami, organizacjami non-profit.</li>
+                            <li>Po drugie, ma to być miejsce wspierające codzienną pracę aktualnych członków. Mamy tutaj dwa aspekty, kontaktu wewnątrz organizacji oraz ze światem zewnętrznym.</li>
+                        </ul>
+                        <p>
+                        Strona składa się z dwóch części:</p>
+                        <ul>
+                            <li>widocznej, która służy do kontaktu z interesariuszami. Jest to część do której każdy ma dostęp. Jest w stanie z niej dowiedzieć się potrzebnych informacji.</li>
+                            <li>Pod spodem planujemy część, w której zbieramy narzędzia do rozwiązywania problemów, optymalizacji procesów czy wzajemnej pomocy w organizacji. Plan jest taki aby ta wewnętrzna część strony stała się czymś na wzór intranetu.</li>
+                        </ul>
                         <p>Aktualne prace dążą do:</p>
                         <ul>
-                            <li>Stworzenia strony w nowej wersji – nr. 3</li>
-                            <li>Logowania/wylogowania za pomocą tokena</li>
-                            <li>Stworzenia formularza kontaktowego dla nowych członków  lub instytucji zainteresowanych współpracą</li>
-                            <li>Rozszerzenia funkcjonalności po „drugiej stronie”</li>
+                            <li>stworzenia strony w nowej wersji – nr 3,</li>
+                            <li>logowania/wylogowania za pomocą tokena,</li>
+                            <li>stworzenia formularza kontaktowego dla nowych członków lub instytucji zainteresowanych współpracą,</li>
+                            <li>rozszerzenia funkcjonalności po „drugiej stronie”.</li>
                         </ul>
                         <p>Technologia:</p>
                         <ul>
@@ -159,8 +168,8 @@
                     <a href="https://dev.volontulo.pl/">https://dev.volontulo.pl/</a>
                     <aside class="notes">
                         <p>Projekt zamrożony.</p>
-                        <p>Przerwany z powodu braku zainteresowania dalszym rozwojem aplikacji i responsywności klienta</p>
-                        <p>Powstał dla WRK (Poznańskie Centrum Wspierania Organizacji Pozarządowych i Wolontariatu/WRK)</p>
+                        <p>Przerwany z powodu braku zainteresowania dalszym rozwojem aplikacji i responsywności klienta.</p>
+                        <p>Powstał dla WRK (Poznańskie Centrum Wspierania Organizacji Pozarządowych i Wolontariatu/WRK).</p>
                         <p>Opis:</p>
                         <ul>
                             <li>Market space dla wolontariuszy i organizacji, które wolontariuszy poszukują.</li>
@@ -179,7 +188,7 @@
                     <img src="img/wysadz_ulice.png" style="background:none; border:none; box-shadow:none; "/>
                     <a href="http://wysadzulice.pl">http://wysadzulice.pl</a>
                     <aside class="notes">
-                        <p> Wysadź ulice jest projektem wspołtworzonym z Koduj dla Polski. Jest to platforma, która ma na celu wspomaganie mieszkańców w projektowaniu i modernizacji ich najbliższego otoczeania. Dzięki tej stronie można zaprojektować otaczającą nas przetrzeń poprzez jej wizualizację. W prosty sposób można dodać ławkę do siedzenia czy klomb kwiatów.
+                        <p> Wysadź ulice jest projektem stworzonym w ramach Koduj dla Polski. Jest to platforma, która ma na celu wspomaganie mieszkańców w projektowaniu i modernizacji ich najbliższego otoczeania. Dzięki tej stronie można zaprojektować otaczającą nas przetrzeń poprzez jej wizualizację. W prosty sposób można dodać ławkę do siedzenia czy klomb kwiatów.
                         Dzięki wysadzulice.pl lokalni społecznicy mogą prowadzić dialog z władzami miasta i mieć wpływ na kształt otaczającego nas środowiska. W tym celu wystarczy wykonać zdjęcie lub pobrać z google street i ulepszczać najbliższą okolicę</p>
                     </aside>
                 </section>
