Fixed text - ZO

--- a/soft_introduction.html
+++ b/soft_introduction.html
@@ -143,7 +143,7 @@
                             <li>Metryka sprawy</li>
                             <li>Protokół</li>
                             <li>Zarządzenie</li>
-                            <li>Zawiadomienie o ZO</li>
+                            <li>Zawiadomienie o ZO - Zespole Orzekającym</li>
                         </ul>
                             <li>Frontend - React</li>
                             <li>Backend - electron, sequelize, sqlite3</li>
